--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MessageMe</title>
+    <%= favicon_link_tag %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +11,15 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <header>
+      <%= render 'layouts/navigation' %>
+    </header>
+
+    <main>
+      <div class="ui container">
+        <%= yield %>
+      </div>
+    <main>
   </body>
 </html>
